fix(SelectInput): dark mode menu colors when using portal (#81)

--- a/src/components/SelectInput/SelectInput.module.scss
+++ b/src/components/SelectInput/SelectInput.module.scss
@@ -184,6 +184,19 @@
   @extend %size-lg;
 }
 
+:global(.react-select__menu-portal) {
+  :global(.react-select__menu) {
+    z-index: var(--size-z-index-popover);
+    background-color: var(--color-background-primary);
+    border-color: var(--color-border-default);
+
+    :global(.react-select__option--is-selected),
+    :global(.react-select__option--is-focused) {
+      background-color: var(--color-background-tertiary);
+    }
+  }
+}
+
 :global(.select-input-wrapper) {
   font-family: var(
     --form-control-font-family,
@@ -300,6 +313,8 @@
       }
     }
   }
+
+
 
   &.size-sm {
     @extend %size-sm;
